--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hai</h1>
-    <p>youtube video</p>
-    
+    <img src="C:\Users\ELCOT\youtubevideo\youtube.png">
 </body>
 </html>
