--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
      <link href='https://css.gg/css' rel='stylesheet'>
     <title>Document</title>
 </head>
 <body>
-    <img src="C:\Users\ELCOT\youtubevideo\youtube.png">
+    <i class="fa fa-youtube fa_custom fa-3x"></i>
+    
     <h1>Hai</h1>
     <p>youtube video</p>
     <div class="gg-arrows-expand-right"></div>
