--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
      <link href='https://css.gg/css' rel='stylesheet'>
     <title>Document</title>
 </head>
 <body>
-     <i class="fa fa-youtube fa_custom fa-3x"></i>
+     <br>
       
     <div class="gg-arrows-expand-right"></div><br>
-    <div class="gg-menu"></div>
+    <div class="icon">
+    <i class="gg-menu"></i> <i class="fa fa-youtube fa_custom fa-3x" ></i>
+</div>
 </body>
+<footer></footer>
 </html>
