--- a/index.html
+++ b/index.html
@@ -9,10 +9,18 @@
      <link href='https://css.gg/css' rel='stylesheet'>
     <title>Document</title>
 </head>
-<body>
+<header>
      <i class="fa fa-youtube fa_custom fa-3x"></i>
       
     <div class="gg-arrows-expand-right"></div><br>
     <div class="gg-menu"></div>
-</body>
+</header>
+<main>
+<aside>
+
+</aside>                         
+</main>
+<footer>
+
+</footer>
 </html>
