--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+     <link href='https://css.gg/css' rel='stylesheet'>
     <title>Document</title>
 </head>
 <body>
-    
+    <nav class="flex-div">
+        <div class="nav-left">
+            <i class="gg-menu flex-div menu "></i>
+            <i class="fa fa-youtube fa_custom fa-3x flex-div icon" ></i>
+        </div>
+        <div class="nav-center flex-div">
+            <input type="text" placeholder="search" class="searchbox"><i class="gg-search"></i><i class="gg-mic"></i>
+        </div>
+       
+    <div class="nav-right flex-div">
+        <i class="gg-camera"></i>
+        <i class="gg-cap"></i>
+    </div>
+    </nav>
 </body>
 </html>
