--- a/index.html
+++ b/index.html
@@ -25,5 +25,17 @@
         <i class="gg-cap"></i>
     </div>
     </nav>
+    <!----------------------------------sidebar------------------------------------------------>
+    <div class="sidebar">
+        <div class="shortcutlinks">
+            <a href="#"><span class="gg-home"></span>Home</a><br>
+            <a href="#"><span class="gg-cloud"></span>Shorts</a><br>
+            <a href="#"> <span class="gg-album"></span>Subscription</a><br>
+            <a href="#"><span class="gg-alarm"></span>History</a><br>
+            <a href="#"><span class="gg-trophy"></span>Like</a><br>
+
+        </div>
+    
+    </div>
 </body>
 </html>
